[gd_scene load_steps=5 format=2]

[ext_resource path="res://Lucas/Scripts/UI/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Lucas/themes/kenneyUI.tres" type="Theme" id=2]
[ext_resource path="res://Lucas/sounds/music_sounds/attack.wav" type="AudioStream" id=3]
[ext_resource path="res://Lucas/sounds/between.mp3" type="AudioStream" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Menu" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1024.0
margin_top = -300.0
margin_bottom = 300.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = -37.5
margin_right = 146.0
margin_bottom = 37.5
focus_neighbour_top = NodePath("ExitButton")
focus_neighbour_bottom = NodePath("StartButton")
focus_mode = 2

[node name="StartButton" type="Button" parent="Menu/VBoxContainer"]
margin_right = 292.0
margin_bottom = 42.251
focus_neighbour_top = NodePath("../ExitButton")
text = "Next Level"

[node name="OptionButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 46.0
margin_right = 292.0
margin_bottom = 88.251
text = "Options"

[node name="ExitButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 92.0
margin_right = 292.0
margin_bottom = 134.251
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
autoplay = true

[connection signal="finished" from="Menu/AudioStreamPlayer" to="Menu" method="_on_AudioStreamPlayer_finished"]
[connection signal="ready" from="Menu/AudioStreamPlayer" to="Menu" method="_on_AudioStreamPlayer_ready"]
[connection signal="pressed" from="Menu/VBoxContainer/StartButton" to="Menu" method="_on_StartButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/OptionButton" to="Menu" method="_on_OptionButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ExitButton" to="Menu" method="_on_ExitButton_pressed"]
